# yaisd

./: Cargo.toml  README.md  install.sh
.github/workflows/: publish.yml
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  process_manager.rs
core/src/process_manager/: config.rs
src/: main.rs  process_manager.rs  self_update.rs
src/process_manager/: config.rs
